--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "niisan-tokyo/fluent-psr-logger",
     "version": "0.1",
-    "description": "The logger implemented PSR-3 logger interface.",
+    "description": "The logger using fluentd implemented PSR-3 logger interface.",
     "keywords": ["logging", "fluentd", "prs"],
     "type": "library",
     "license": "MIT",
